pkg/xds/generator/testdata/default-proxy-profile/2-envoy-config.golden.yaml
resources:
- name: self_inbound_dp_80
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    circuitBreakers:
      thresholds:
      - trackRemaining: true
    connectTimeout: 10s
    loadAssignment:
      clusterName: self_inbound_dp_80
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: 192.168.0.1
                portValue: 8080
    name: self_inbound_dp_80
    type: STATIC
    upstreamBindConfig:
      sourceAddress:
        address: 127.0.0.6
        portValue: 0
- name: self_transparentproxy_no_destination_inbound
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    altStatName: self_transparentproxy_no_destination_inbound
    circuitBreakers:
      thresholds:
      - trackRemaining: true
    connectTimeout: 5s
    name: self_transparentproxy_no_destination_inbound
    type: STATIC
- name: self_transparentproxy_passthrough_inbound_ipv4
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    circuitBreakers:
      thresholds:
      - trackRemaining: true
    connectTimeout: 5s
    lbPolicy: CLUSTER_PROVIDED
    name: self_transparentproxy_passthrough_inbound_ipv4
    type: ORIGINAL_DST
    upstreamBindConfig:
      sourceAddress:
        address: 127.0.0.6
        portValue: 0
- name: system_envoy_admin
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    circuitBreakers:
      thresholds:
      - trackRemaining: true
    connectTimeout: 5s
    loadAssignment:
      clusterName: system_envoy_admin
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: 127.0.0.1
                portValue: 9902
    name: system_envoy_admin
    type: STATIC
- name: system_probe_readiness
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    circuitBreakers:
      thresholds:
      - trackRemaining: true
    connectTimeout: 5s
    loadAssignment:
      clusterName: system_probe_readiness
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: 127.0.0.1
                portValue: 9903
    name: system_probe_readiness
    type: STATIC
- name: self_inbound_dp_80
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 192.168.0.1
        portValue: 80
    bindToPort: false
    enableReusePort: true
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: self_inbound_dp_80
          idleTimeout: 7200s
          statPrefix: self_inbound_dp_80
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/unified-name: self_inbound_dp_80
    name: self_inbound_dp_80
    statPrefix: self_inbound_dp_80
    trafficDirection: INBOUND
- name: self_transparentproxy_passthrough_inbound_ipv4
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 0.0.0.0
        portValue: 15006
    enableReusePort: true
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: self_transparentproxy_passthrough_inbound_ipv4
          statPrefix: self_transparentproxy_passthrough_inbound_ipv4
    name: self_transparentproxy_passthrough_inbound_ipv4
    statPrefix: self_transparentproxy_passthrough_inbound_ipv4
    trafficDirection: INBOUND
    useOriginalDst: true
- name: self_transparentproxy_passthrough_outbound_ipv4
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 0.0.0.0
        portValue: 15001
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: self_transparentproxy_passthrough_outbound_ipv4
          statPrefix: self_transparentproxy_passthrough_outbound_ipv4
    name: self_transparentproxy_passthrough_outbound_ipv4
    statPrefix: self_transparentproxy_passthrough_outbound_ipv4
    trafficDirection: OUTBOUND
    useOriginalDst: true
- name: system_dynamicconfig
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      pipe:
        path: /tmp/kuma-mesh-metric-config.sock
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
            - addressPrefix: ::1
              prefixLen: 128
          routeConfig:
            maxDirectResponseBodySizeBytes: 18
            virtualHosts:
            - domains:
              - '*'
              name: system_dynamicconfig
              routes:
              - directResponse:
                  status: 304
                match:
                  headers:
                  - name: If-None-Match
                    stringMatch:
                      exact: 8376431f05ed0574aa914db9f36153ed5837a067d6d3450847c49d89b37ad1bf
                  path: /identity-readiness
                name: system_dynamicconfig_identity-readiness_not_modified
              - directResponse:
                  body:
                    inlineString: '{"required":false}'
                  status: 200
                match:
                  path: /identity-readiness
                name: system_dynamicconfig_identity-readiness
                responseHeadersToAdd:
                - header:
                    key: Etag
                    value: 8376431f05ed0574aa914db9f36153ed5837a067d6d3450847c49d89b37ad1bf
          statPrefix: system_dynamicconfig
    name: system_dynamicconfig
    statPrefix: system_dynamicconfig
- name: system_envoy_admin
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 192.168.0.1
        portValue: 9902
    enableReusePort: true
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
            - addressPrefix: ::1
              prefixLen: 128
          routeConfig:
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: system_envoy_admin
              routes:
              - match:
                  prefix: /ready
                route:
                  cluster: system_probe_readiness
                  prefixRewrite: /ready
          statPrefix: system_envoy_admin
    - filterChainMatch:
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
            - addressPrefix: ::1
              prefixLen: 128
          routeConfig:
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: system_envoy_admin
              routes:
              - match:
                  prefix: /ready
                route:
                  cluster: system_probe_readiness
                  prefixRewrite: /ready
              - match:
                  prefix: /
                route:
                  cluster: system_envoy_admin
                  prefixRewrite: /
          statPrefix: system_envoy_admin
      transportSocket:
        name: envoy.transport_sockets.tls
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          commonTlsContext:
            tlsCertificates:
            - certificateChain:
                inlineBytes: Y2VydFBFTQ==
              privateKey:
                inlineBytes: a2V5UEVN
            validationContext:
              matchTypedSubjectAltNames:
              - matcher:
                  exact: kuma-cp
                sanType: DNS
              trustedCa:
                inlineBytes: Y2FQRU0=
          requireClientCertificate: true
    listenerFilters:
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    name: system_envoy_admin
    trafficDirection: INBOUND
